# LangChain

./: .gitignore  1. Generative Models.ipynb  2. LangChain.ipynb  3. Information Processing.ipynb  4. ChatBots.ipynb  5. Prompt Engineering.ipynb  6. LangGraph.ipynb  README.md  pyproject.toml  requirements.txt
data/: trump.csv
