[project]
name = "my_langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Goncalves",email = "bgoncalves@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "watermark (>=2.5.0,<3.0.0)",
    "openai (>=1.78.1,<2.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-anthropic (>=0.3.14,<0.4.0)",
    "langchain-core (>=0.3.62,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "chromadb (>=1.0.11,<2.0.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
