[project]
name = "langchain_tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "duckduckgo-search>=8.1.1",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.9",
    "langgraph>=1.1.8",
    "matplotlib>=3.10.8",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "watermark>=2.6.0",
]
